  * added empty definitions for macro functions DUMA_SET_ALIGNMENT(),
    DUMA_SET_PROTECT_BELOW() and DUMA_SET_FILL()
  * updated README on shell environment variable options, added some
    entries to section 'OTHER ALTERNATIVE/ADDITIONAL DEBUGGING SOFTWARE/TOOLS'
    and added section 'COMPILATION NOTES FOR RELEASE/PRODUCTION'
  (2007-08-18, HA)

2.5.7
  * reformatting: converted tabs to spaces
  * added test program testenv.c using global environ variable as
    alternative to getenv()
  (2007-08-15, HA)
  * added output of some configuration settings with banner
  * switched off leak detection in shared library for any platform.
    use the static library for finding leaks - with information where
    the piece of memory got allocated. Meanwhile I think leak-checking
    without further information is quite useless! Too many correct
    programs don't free all memory, cause the system frees memory up at
    program end. Thus, too many platforms/environments are reported
    "broken" from DUMA.
  * output allocator type (malloc, strdup, ..) with leak report for each
    non freed memory block
  * removed option DUMA_USE_FRAMENO and the frameno variable
    i suppose nobody is using it. but additionally it is not thread safe.
  * added option DUMA_PREFER_GETENV
     if you prefer standard C library getenv() over global char **environ
  * added function duma_check(void*) and its macro DUMA_CHECK():
      it checks the No Mans Land - especially the unprotected end - of
      the memory block
  * added function duma_checkAll() and its macro DUMA_CHECKALL():
      it checks the No Mans Land - especially the unprotected end - of
      all allocated memory blocks
  (2007-08-17, HA)

2.5.6
  * modified example Makefiles for not linking to pthreads on Windows
  (2007-08-12, HA)
  * added win32-msvc.net project file for testoperators.cpp
  * bugfix: obey for option DUMA_NO_LEAKDETECTION:
    check for this option before calling any non-existing operators